# svg-graph-generator

./: .gitignore  CMakeLists.txt  README.md  data.csv  main.cpp  prescript.txt  settings.json
.github/workflows/: cmake.yml  codeql.yml
include/: CSVReader.hpp  Chart.hpp  JsonReader.hpp  OrderedMap.hpp
src/: CSVReader.cpp  Chart.cpp  JsonReader.cpp  OrderedMap.cpp  main.cpp
tests/: chart_test.cpp  histogram_test.cpp  ordered_map_test.cpp  test_data.csv  test_settings.json
